--- a/identity-server/templates/src/IdentityServerEmpty/IdentityServerEmpty.csproj
+++ b/identity-server/templates/src/IdentityServerEmpty/IdentityServerEmpty.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Duende.IdentityServer" version="7.2.0" />
-
+    <ProjectReference Include="..\..\..\src\IdentityServer\Duende.IdentityServer.csproj" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
   </ItemGroup>
 </Project>
