--- a/identity-server/templates/src/IdentityServerEntityFramework/IdentityServerEntityFramework.csproj
+++ b/identity-server/templates/src/IdentityServerEntityFramework/IdentityServerEntityFramework.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Duende.IdentityServer.EntityFramework" version="7.2.0" />
-
+    <ProjectReference Include="..\..\..\src\EntityFramework\Duende.IdentityServer.EntityFramework.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="8.0.11" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
 
