--- a/identity-server/templates/src/IdentityServerInMem/IdentityServerInMem.csproj
+++ b/identity-server/templates/src/IdentityServerInMem/IdentityServerInMem.csproj
@@ -7,11 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Duende.IdentityServer" version="7.2.0" />
-
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="8.0.11" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
+    <ProjectReference Include="..\..\..\src\IdentityServer\Duende.IdentityServer.csproj" />
   </ItemGroup>
-
 
 </Project>
